2009.08.18: David Nichols
	* fixed Socket::connect() with timeout

2009.07.20: David Nichols
	* added static method TermIOS::getWindowSize() to get the current size
	  of the terminal; returns a hash with "rows" and "columns" keys
	* bug fix: added QDOM_TERMINAL_IO to TermIOS class

2009.07.16: David Nichols
	* fixed a bug parsing XML-RPC array data with empty value elements;
	  i.e.: <value/>

2009.07.15: David Nichols
	* fixed a bug waiting on a Condition variable when thread read lock
	  is held by multiple threads (for RWLock)
	* fixed a bug calculating the time offset for waiting on a Condition
	  object

2009.07.14: David Nichols
	* fixed millisecond formatting with format_date()
	* fixed a crashing bug when a Condition object waits on a RWLock with
	  the read lock held
	* fixed a bug setting the exception location when throwing thread
	  resource exceptions when shutting down the qore library; the bug
	  fix is to clear the program location first

*** v0.7.5 RELEASE *** 

2009.07.13: David Nichols
	* added assert()s to catch the error where object private data is
	  saved with a 0 value
	* fixed a bug in the HTTPClient class where the connection was not
	  flagged as closed when an error occurred that indicated that the
	  client had closed the connection

2009.07.01: David Nichols
	* fixed a bug in Datasource::close(); with debugging enabled, it would
	  trigger an assert, without debugging, would do nothing at all
	* added the module directory as the "ModuleDir" key to the hash output
	  of get_qore_library_info() 

2009.06.25: David Nichols
	* added an optional port number to datasources, that DBI drivers can
	  use if they support module API 0.7 or above; modified the
	  parseDatasource() function to support parsing port numbers;
	  added or modified the following methods to existing classes:
	  + Datasource::constructor(): added support for a port argument
	  + Datasource::setPort(): new method
	  + Datasource::getPort(): new method